@@ -86,6 +86,22 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>September 8, 2008</h3>
+	      <b>Unstable</b> version 2.23.92 released.<br />
+	      This is the last release before the
+		  before the stable 2.24 version is released.
+		  It only contains bug fixes.
+
+	      <br /><br />
+			Changes since 2.23.91:
+			<ul>
+			<li>Add support for embedding an extra widget into AccountDialog</li>
+			<li>Fixed #550297, Identi.ca module does not support OpenId causes confussion</li>
+			<li>Changed default UI "Button"</li>
+    		<li>Added RecentHandler, CalculatorModule, GdmHandler and TemplateHandler to default list of enabled modules. Removed MozillaBookmarksHandler and MozillaSearchHandler from default list of enabled modules</li>
+			</ul>
+			<a href="download.html">Download it</a>
+	      
 	    <h3>September 1, 2008</h3>
 	      <b>Unstable</b> version 2.23.91 released.<br />
 	        This release mainly features bug fixes.
