@@ -1,3 +1,9 @@
+2008-09-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.23.92 release
+
 2008-09-01	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
